--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <li>Multisim</li>
 <li>Wireshark</li>
 <li>Simulink</li>
-<li>Visual Studi</li>
+<li>Visual Studio</li>
 <li>VS Code</li>
 </ul>
 <h3><a href="./branches/branch1.html">PERSONAL PROJECTS</h3>
